apps/shop/loadgenerator/k8s/overlays/prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-loadgenerator-prod
spec:
  host: shop-loadgenerator.shop-loadgenerator.svc.cluster.local
  subsets:
  - name: shop-loadgenerator-prod
    labels:
      app: shop-loadgenerator
      env: prod
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-loadgenerator-prod-p1a
    labels:
      app: shop-loadgenerator
      env: prod
      deploy.cloud.google.com/target-id: p1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
