apps/shop/loadgenerator/k8s/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shop-loadgenerator-prod
spec:
  hosts:
  - shop-loadgenerator
  http:
  - match:
    - sourceLabels:
        app: shop-loadgenerator
        env: prod
    route:
    - destination:
        host: shop-loadgenerator
        subset: shop-loadgenerator-prod
